--- a/index.html
+++ b/index.html
@@ -6,10 +6,47 @@
     <title>Il mio viaggio a Londra</title>
 </head>
 <body>
+    <!-- First Section -->
     <h1>Il mio viaggio a Londra</h1>
     <img src="./img/pexels-bill-emrich-230794-0.jpg" alt="">
     <img src="./img/pexels-bill-emrich-230794-1.jpg" alt="">
     <img src="./img/pexels-bill-emrich-230794-2.jpg" alt="">
+
     <hr>
+
+    <!-- Le mie spese -->
+     <h2>Le mie spese</h2>
+     <table>
+        <thead>
+            <tr>
+                <th>Numero</th>
+                <th>Descrizione</th>
+                <th>Costo</th>
+            </tr>
+        </thead>
+        <tbody>
+           <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120&euro;</td>
+           </tr>
+           <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120&euro;</td>
+           </tr>
+           <tr>
+            <td>1</td>
+            <td>Biglietto Aereo</td>
+            <td>120&euro;</td>
+           </tr>
+           <tr>
+            <td colspan="2">Totale</td>
+            <td>360&euro;</td>
+           </tr> 
+        </tbody>
+     </table>
+
+     <hr>
 </body>
 </html>
